--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ logging.level.com.michmzr.gimmeback=TRACE
 
 #Serialization
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+
+
+#spring.devtools.restart.additional-paths = /path-to-folder
