--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#Database
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+##Database
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/gimme?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=ppp12345!
@@ -9,13 +9,19 @@ spring.datasource.password=ppp12345!
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+## Hibernate Logging
+logging.level.org.hibernate.SQL=ERROR
 
 #Debug
 logging.level.root=INFO
 logging.level.com.michmzr.gimmeback=TRACE
 
 #Serialization
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
-
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+# Initialize the datasource with available DDL and DML scripts
+spring.datasource.initialization-mode=always
 
 #spring.devtools.restart.additional-paths = /path-to-folder
+## App Properties
+app.jwtSecret=JWTSuperSecretKey
+app.jwtExpirationInMs=604800000
