--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,13 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE")
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.21"
     }
+}
+
+plugins {
+    id 'net.ltgt.apt' version '0.8'
+    id 'net.ltgt.apt-idea' version '0.21'
 }
 
 apply plugin: 'java'
@@ -12,6 +18,8 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'net.ltgt.apt-idea'
+apply plugin: 'net.ltgt.apt-eclipse'
 
 bootJar {
     baseName = 'gimmeback'
@@ -30,6 +38,10 @@ configurations {
     runtimeClasspath {
         extendsFrom developmentOnly
     }
+}
+
+ext {
+    mapstructVersion = "$mapStructVersion"
 }
 
 dependencies {
@@ -57,6 +69,10 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.6.RELEASE'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
+    //Mapping
+    implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+
     //Testing
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
@@ -64,6 +80,8 @@ dependencies {
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 
+    // If you are using mapstruct in test code
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 }
 
 test {
