--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   mysql:
     container_name: app_db
     image: mysql
-    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=UTF8MB4
+    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8
     environment:
       MYSQL_DATABASE: gimme
       MYSQL_ROOT_PASSWORD: ppp12345!
