--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+//noinspection GroovyAssignabilityCheck
+
 buildscript {
     repositories {
         mavenCentral()
@@ -9,7 +11,7 @@ buildscript {
 }
 
 plugins {
-    id 'net.ltgt.apt' version '0.8'
+    id 'net.ltgt.apt' version '0.20'
     id 'net.ltgt.apt-idea' version '0.21'
 }
 
@@ -71,14 +73,22 @@ dependencies {
 
     //Mapping
     implementation "org.mapstruct:mapstruct:$mapStructVersion"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
 
-    //Testing
-    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    // mandatory dependencies for using Spock
+    compile "org.codehaus.groovy:$groovyVersion"
+    //testCompile platform("org.spockframework:spock-bom:$spockVersion")
+    testCompile "org.spockframework:spock-core"
 
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junitVersion"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    // optional dependencies for using Spock
+    testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
+    testRuntime "net.bytebuddy:byte-buddy:1.9.3"          // allows mocking of classes (in addition to interfaces)
+    testRuntime "org.objenesis:objenesis:2.6"    // allows mocking of classes without default constructor (together with CGLIB)
+
+    testCompile "com.blogspot.toomuchcoding:spock-subjects-collaborators-extension:$SpockSubjectsCollabolatorsVersion"
+
+    // https://mvnrepository.com/artifact/cglib/cglib-nodep
+    testCompile group: 'cglib', name: 'cglib-nodep', version: '3.3.0'
 
     // If you are using mapstruct in test code
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
