--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+org.gradle.warning.mode=all
 junitVersion=5.3.2
 lombokVersion=1.18.8
 mapStructVersion:1.3.0.Final
+groovyVersion=groovy-all:2.5.8
+spockVersion=2.0-M1-groovy-2.
+SpockSubjectsCollabolatorsVersion=1.2.2
