--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 }
 
 plugins {
+    id 'groovy'
     id 'net.ltgt.apt' version '0.8'
     id 'net.ltgt.apt-idea' version '0.21'
 }
@@ -23,7 +24,7 @@ apply plugin: 'net.ltgt.apt-eclipse'
 
 bootJar {
     baseName = 'gimmeback'
-    version =  '0.1.0'
+    version = '0.1.0'
 }
 
 repositories {
@@ -32,6 +33,12 @@ repositories {
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+//Libraries version
+def lombokVersion = "1.18.8"
+def spockVersion = "1.1-groovy-2.4"
+def cgLibVersion = "3.2.4"
+def mapStructVersion = "1.3.0.Final"
 
 configurations {
     developmentOnly
@@ -53,6 +60,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.6.RELEASE'
 
+    // https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
     //Data
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.8.RELEASE'
     compile 'mysql:mysql-connector-java'
@@ -72,16 +82,18 @@ dependencies {
     //Mapping
     implementation "org.mapstruct:mapstruct:$mapStructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+
+    // Groovy
+    compile 'org.codehaus.groovy:groovy-all:2.4.7'
 
     //Testing
-    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testCompile("org.springframework.security:spring-security-test")
 
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junitVersion"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-
-    // If you are using mapstruct in test code
-    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile "org.spockframework:spock-core:$spockVersion"
+    testCompile "org.spockframework:spock-spring:$spockVersion"
+    testRuntime "cglib:cglib-nodep:$cgLibVersion"
 }
 
 test {
