--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,5 @@
 org.gradle.warning.mode=all
-springVersion=2.1.6.RELEASE
+springVersion=2.4.5
 junitVersion=5.3.2
-lombokVersion=1.18.8
-mapStructVersion:1.3.0.Final
-groovyVersion=groovy-all:2.5.8
-spockVersion=2.0-M1-groovy-2.
 SpockSubjectsCollabolatorsVersion=1.2.2
+org.gradle.jvmargs=-XX\:MaxHeapSize\=1024 -Xmx1024m
