--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/gimme?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=ppp12345!
-
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -11,17 +10,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 ## Hibernate Logging
 logging.level.org.hibernate.SQL=ERROR
-
 #Debug
 logging.level.root=INFO
 logging.level.com.michmzr.gimmeback=TRACE
-
 #Serialization
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 # Initialize the datasource with available DDL and DML scripts
 spring.datasource.initialization-mode=always
-
+spring.datasource.data=classpath:db/data.sql
 #spring.devtools.restart.additional-paths = /path-to-folder
 ## App Properties
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+server.port=8080
