WIP: Applying DTOs in Person domain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,7 @@ logging.level.com.michmzr.gimmeback=TRACE
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 # Initialize the datasource with available DDL and DML scripts
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:db/data.sql
-#spring.devtools.restart.additional-paths = /path-to-folder
+#spring.datasource.data=classpath:db/data.sql
 ## App Properties
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
