--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 
 plugins {
+    id 'java'
     id 'groovy'
     id 'eclipse'
     id 'idea'
@@ -18,7 +19,6 @@ plugins {
     id 'net.ltgt.apt-idea' version '0.21'
     id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
 }
 
 apply plugin: 'java'
@@ -32,19 +32,20 @@ apply plugin: 'net.ltgt.apt-eclipse'
 
 group = 'com.michmzr'
 version = '0.0.1'
-targetCompatibility = 15
+targetCompatibility = 13
 
 repositories {
     mavenCentral()
 }
 
 compileJava {
-    sourceCompatibility = 15
-    targetCompatibility = 15
+    sourceCompatibility = 13
+    targetCompatibility = 13
 }
 
 //Libraries version
 def lombokVersion = "1.18.20"
+def groovyVersion = '2.4.21'
 def spockVersion = "1.1-groovy-2.4"
 def cgLibVersion = "3.2.4"
 def mapStructVersion = "1.3.0.Final"
@@ -88,10 +89,14 @@ dependencies {
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 
     //TESTING
-    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.21'
-    implementation group: 'org.spockframework', name: 'spock-bom', version: "$spockVersion", ext: 'pom'
-    testImplementation "org.spockframework:spock-core:$spockVersion"
-    testImplementation "org.spockframework:spock-spring:$spockVersion"
+
+    implementation 'org.codehaus.groovy:groovy:3.0.5'
+    testImplementation('org.spockframework:spock-core:2.0-M3-groovy-3.0')
+    testImplementation('org.spockframework:spock-spring:2.0-M3-groovy-3.0')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+
 
     testImplementation  "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
     implementation group: 'net.bytebuddy', name: 'byte-buddy-dep', version: '1.11.0'
@@ -99,11 +104,9 @@ dependencies {
     implementation group: 'com.blogspot.toomuchcoding', name: 'spock-subjects-collaborators-extension', version: '1.2.2'
     implementation group: 'cglib', name: 'cglib-nodep', version: '3.3.0'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
 }
 
-test {
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
