--- a/build.gradle
+++ b/build.gradle
@@ -84,8 +84,7 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$mapStructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
-
-    // If you are using mapstruct in test code
+    
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 
     //TESTING
@@ -97,6 +96,7 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 
+    testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
     testImplementation  "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
     implementation group: 'net.bytebuddy', name: 'byte-buddy-dep', version: '1.11.0'
