--- a/build.gradle
+++ b/build.gradle
@@ -66,8 +66,9 @@ dependencies {
     //Data
     implementation group: 'org.springframework.data', name: 'spring-data-commons'
     implementation group: 'org.springframework.data', name: 'spring-data-jpa'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'javax.validation', name: 'validation-api'
 
     runtimeOnly 'mysql:mysql-connector-java'
 
@@ -84,7 +85,7 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$mapStructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
-    
+
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 
     //TESTING
