--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.port=8080
+#Validation
+server.error.include-binding-errors=always
