handling REST errors -> return a standardized response with details
 - working handler validation errors
 - fixed some tests
 - Added rest standard error response assert object
 - refactorings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.port=8080
 #Validation
 server.error.include-binding-errors=always
+spring.jackson.serialization.write-dates-as-timestamps:false
