--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,6 @@ compileJava {
 
 //Libraries version
 def lombokVersion = "1.18.20"
-def groovyVersion = '2.4.21'
-def spockVersion = "1.1-groovy-2.4"
-def cgLibVersion = "3.2.4"
 def mapStructVersion = "1.3.0.Final"
 
 ext {
@@ -75,8 +72,8 @@ dependencies {
     //3rd
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.3'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.0'
 
     //Security
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
@@ -86,11 +83,9 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 
-    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
-
     //TESTING
 
-    implementation 'org.codehaus.groovy:groovy:3.0.5'
+    implementation 'org.codehaus.groovy:groovy:3.0.8'
     testImplementation('org.spockframework:spock-core:2.0-M3-groovy-3.0')
     testImplementation('org.spockframework:spock-spring:2.0-M3-groovy-3.0')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -99,7 +94,7 @@ dependencies {
 
     testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
-    testImplementation  "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
+    testImplementation  "org.hamcrest:hamcrest-core:1.3"
     implementation group: 'net.bytebuddy', name: 'byte-buddy-dep', version: '1.11.0'
     testImplementation group: 'org.objenesis', name: 'objenesis', version: '2.6'
     implementation group: 'com.blogspot.toomuchcoding', name: 'spock-subjects-collaborators-extension', version: '1.2.2'
