--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.0'
 
+    //Docs
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.11'
+
+
     //Security
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
