--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
+org.gradle.warning.mode=all
+springVersion=2.4.5
 junitVersion=5.3.2
-lombokVersion=1.18.8
+SpockSubjectsCollabolatorsVersion=1.2.2
+org.gradle.jvmargs=-XX\:MaxHeapSize\=1024 -Xmx1024m
