--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ plugins {
     id 'groovy'
     id 'eclipse'
     id 'idea'
-    id 'net.ltgt.apt' version '0.20'
-    id 'net.ltgt.apt-idea' version '0.21'
+//    id 'net.ltgt.apt' version '0.20'
+//    id 'net.ltgt.apt-idea' version '0.21'
     id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "org.sonarqube" version "3.3"
@@ -28,8 +28,8 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'net.ltgt.apt-idea'
-apply plugin: 'net.ltgt.apt-eclipse'
+//apply plugin: 'net.ltgt.apt-idea'
+//apply plugin: 'net.ltgt.apt-eclipse'
 
 group = 'com.michmzr'
 version = '0.0.1'
