--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 
     testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
